fix: 🐛 qrcode text wrap

--- a/src/app/referral/components/QrcodeModal/styles.module.scss
+++ b/src/app/referral/components/QrcodeModal/styles.module.scss
@@ -105,14 +105,17 @@
       gap: 12px;
       display: inline-flex;
       .linkText {
-        flex: 1 1 0;
+        width: fit-content;
+        flex: 1;
         color: #979aa1;
         font-size: 14px;
         font-weight: 400;
         line-height: 20px;
-        word-wrap: break-word;
+        -webkit-line-clamp: 2;
+        text-overflow: ellipsis;
       }
       .copyImageWrap {
+        min-width: 32px;
         width: 32px;
         height: 32px;
         display: flex;
